Add option to preset "Preserve my reminder"
When receiving a meeting invite, if the user doesn't tick the "Preserve my reminder" and just accepts the invite, he will not get notified before the meeting occurs.
I think this is a bad default, ideally it should be configurable in the "Calendars and tasks" preferences but it should at least be true by default.
Edited by Milan Crha