I#338 - Add option to preset "Preserve my reminder"

Closes https://gitlab.gnome.org/GNOME/evolution/issues/338